--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,8 @@
   <head>
     <title>M.Eng. Online Learning | Engineering Management</title>
     <meta charset="UTF-8">
-    <meta name="description" content="Your site's description should be here">
-    <meta name="keywords" content="Your site's keywords should be here">
+    <meta name="description" content="Cornell Engineering Management Online Learning Program">
+    <meta name="keywords" content="Cornell University, Cornell Engineering, Online Learning, Engineering Management">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     <link rel="stylesheet" href="style.css"> 
