added true links

--- a/public/index.html
+++ b/public/index.html
@@ -64,7 +64,7 @@
             </div>
             <img class="text-3" src="images/ranked_3_by_u_s_news_worl.png" alt="Ranked #3 by U.S. News &amp; World Report's 2023  Best Online Master's in Engineering Management Programs." width="500" height="39" title="Ranked #3 by U.S. News &amp; World Report's 2023  Best Online Master's in Engineering Management Programs.">
             <img class="text-4" src="images/ready_to_gain_leadership_.png" alt="Ready to gain leadership  skills, build confidence  and catapult your career  to the next level?" width="440" height="180" title="Ready to gain leadership  skills, build confidence  and catapult your career  to the next level?">
-            <a href="">
+            <a href="https://gradschool.cornell.edu/admissions/apply/apply-now/">
               <div class="row group">
                 <img class="text-5" src="images/start_here.png" alt="Start here" width="207" height="34" title="Start here">
                 <img class="text-6" src="images/application_deadline_for__2.png" alt="Application deadline for Summer 2023 cohort is May 1st!" width="384" height="26" title="Application deadline for Summer 2023 cohort is May 1st!">              
@@ -85,7 +85,7 @@
               <!--video overlay-->
               
             </div>
-            <a href="">
+            <a href="https://gradschool.cornell.edu/admissions/apply/apply-now/">
               <div class="cta-button-red-holder">
                 <span class="button-text">Accelerate Your Career</span>
                 <!--
@@ -160,7 +160,7 @@
               -->
              
             </div>
-            <a href="">
+            <a href="https://gradschool.cornell.edu/admissions/apply/apply-now/">
               <div class="rectangle-2-holder">
                 <!--
                   <img class="text-16" src="images/accelerate_your_career.png" alt="Accelerate Your Career" width="506" height="34" title="Accelerate Your Career">
@@ -242,7 +242,7 @@
         </div>
         <div class="apply-now-section">
           <img class="text-25" src="images/application_deadline_for_.png" alt="Application deadline for Summer 2023 cohort is May 1st! Ready to apply now?" width="505" height="53" title="Application deadline for Summer 2023 cohort is May 1st! Ready to apply now?">
-          <a href="">
+          <a href="https://gradschool.cornell.edu/admissions/apply/apply-now/">
             <div class="apply-now-red-button-holder">
               <!--
                 <img class="text-26" src="images/how_to_apply.png" alt="How to Apply" width="194" height="24" title="How to Apply">
